# querylang

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
libs/common/: Cargo.toml
libs/common/src/shared/: mod.rs  status_msg.rs
libs/common/src/utils/: config_loader.rs  mod.rs
libs/query_parser/: Cargo.toml
libs/query_parser/src/: builders.rs  error.rs  lib.rs  parser.rs  rule_parsers.rs
libs/query_parser/src/model/: metric.rs  mod.rs  operator.rs  time_spec.rs  time_unit.rs
scripts/: build-with-docker.sh  configure-k8s.sh  restart.sh
services/metrics-api/: Cargo.toml
services/metrics-api/config/: default.toml
services/metrics-api/infra/: Dockerfile
services/metrics-api/infra/k8s/: deployment.yaml  service.yaml
services/metrics-api/src/: config.rs  error.rs  main.rs
services/metrics-api/src/api/: mod.rs  root_handler.rs
services/metrics-api/src/api/graphql/: graphql_handler.rs  mod.rs  resolver.rs  schema.rs
services/metrics-api/src/repository/: metrics_repository.rs  metrics_repository_mock.rs  mod.rs
services/metrics-api/src/service/: metrics_service.rs  mod.rs
services/metrics-api/src/shared/: config.rs  metric_record.rs  metric_value.rs  mod.rs
services/query-api/: Cargo.toml
services/query-api/config/: default.toml  dev.toml
services/query-api/infra/: Dockerfile
services/query-api/infra/k8s/: deployment.yaml  service.yaml
services/query-api/src/: config.rs  error.rs  main.rs
services/query-api/src/api/: query_handler.rs  root_handler.rs
services/query-api/src/domain/: mod.rs  table.rs  types.rs
services/query-api/src/repository/: get_metrics.graphql  metrics_repository_gql.rs  mod.rs
services/query-api/src/service/: mod.rs  query_service.rs
services/query-api/src/shared/: config.rs  mod.rs  query_plan.rs  target_metrics.rs
src/: config.rs  main.rs
src/adapter/parser/: parser.rs
src/api/: mod.rs  query_handler.rs  root_handler.rs  router.rs
src/data/: column_builder.rs  mod.rs  table.rs  table_builder.rs
src/domain/: metric.rs  mod.rs  table.rs  types.rs
src/error/: app_error.rs
src/gql_server/: server.rs
src/http_server/: mod.rs  query_handler.rs  router.rs  server.rs
src/parser/: expr.rs  metric.rs  mod.rs  model.rs  operator.rs  parser.rs  query.pest  query.rs  symbol_metric.rs  time_range.rs  time_spec.rs  time_unit.rs
src/query_engine/: data_target.rs  gql_client.rs  gql_query.rs  mod.rs  query_plan.rs  schema.graphql
src/repository/: metrics_repository.rs
src/service/: query_service.rs
src/service/query/: mod.rs
src/shared/: date_range.rs  mod.rs  query_plan.rs  status_msg.rs  target_metrics.rs
