[package]
name = "querylang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "query"
path = "src/main.rs"

[[bin]]
name = "gqlmock"
path = "src/gql_server/server.rs"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = "0.4.41"
futures = "0.3.31"
graphql_client = "0.14.0"
hyper = "1.6.0"
pest = "2.8.0"
pest_derive = "2.8.0"
rand = "0.9.1"
reqwest = { version="0.12.19", features = ["json", "blocking", "rustls-tls"] }
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version="1.45.1", features=["full"] }
tower = { version = "0.5.2", features = ["tokio", "timeout", "tracing"] }
tower-http = { version="0.6.6", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

