[workspace]
members = [
    "libs/common",
    "libs/query_parser",
    "services/query-api",
    "services/metrics-api"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
serde = { version="1.0.219", features=["derive"] }
thiserror = "2.0.12"
tokio = { version="1.45.1", features=["full"] }
