[package]
name = "query-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = "0.4.41"
common = { path = "../../libs/common" }
futures = "0.3.31"
graphql_client = "0.14.0"
query_parser = { path = "../../libs/query_parser" }
reqwest = { version="0.12.19", features = ["json", "blocking", "rustls-tls"] }
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8.23"
tower = { version = "0.5.2", features = ["tokio", "timeout", "tracing"] }
tower-http = { version="0.6.6", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

